# zerostallcam

./: .gitignore  README.md  settings.gradle.kts
.artifacts/e05d3a0f-4eba-4162-9f78-0bdeb3dd07e4/: implementation_plan.artifact.md
app/: build.gradle.kts
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: scene.vert
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Components/: BufferComponent.h  CameraComponent.h  GraphicsComponent.h  HardwareBufferLayouts.h  TimestampComponent.h  TransformComponent.h
app/src/main/cpp/Shaders_Kernels/: scene.frag  scene.vert
app/src/main/cpp/Systems/: BufferSystem.cpp  BufferSystem.h  CameraSystem.cpp  CameraSystem.h  EglManager.cpp  EglManager.h  Engine.cpp  Engine.h  RenderSystem.cpp  RenderSystem.h  ShaderManager.cpp  ShaderManager.h
app/src/main/cpp/camera/: ImageProvider.cpp  ImageProvider.h  NDKCamera.cpp  NDKCamera.h
app/src/main/cpp/engine/: CameraEngine.cpp  CameraEngine.h  Renderer.cpp  Renderer.h
app/src/main/cpp/graphics/: EglManager.cpp  EglManager.h  FontAtlas.cpp  FontAtlas.h  SceneGeometry.cpp  SceneGeometry.h  ShaderProgram.cpp  ShaderProgram.h
app/src/main/cpp/jni/: JniBridge.cpp
app/src/main/java/com/example/zerostallcam/: MainActivity.kt  (+1 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
